# Inoue

./: .gitignore  COMMANDS.md  CONTRIBUTING.md  GUIDE.md  README.md  SECURITY.md  TEST  inoue.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
core/: scanner.py
fingerprints/: __init__.py  extended_catalog.py  signatures.py
tests/: test_scanner.py
