[project]
name = "inoue"
version = "1.0.1"
description = "Inoue — fast tech stack fingerprinting CLI"
authors = ["Alham Rizvi <https://github.com/alhamrizvi-cloud/Inoue>"]
requires-python = ">=3.10"

[tool.poetry.dependencies]
httpx = ">=0.27"
rich = ">=13"
typer = ">=0.12"
dnspython = ">=2.6"
python-whois = ">=0.8"
requests = ">=2.31"
beautifulsoup4 = ">=4.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
